--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,12 @@
             <version>7.3.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.github.dzieciou.testing</groupId>
+            <artifactId>curl-logger</artifactId>
+            <version>1.0.4</version>
+        </dependency>
+
         <!-- https://mvnrepository.com/artifact/io.appium/java-client -->
         <dependency>
             <groupId>io.appium</groupId>
